[tool.poetry]
name = "simple-backends"
version = "0.1.0"
description = ""
authors = ["Max Klyuchnikov <me.klyuchnikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
